--- a/selinemooddiary/projectinfo/templates/projectinfo/aboutproject.html
+++ b/selinemooddiary/projectinfo/templates/projectinfo/aboutproject.html
@@ -13,6 +13,9 @@
             <h1>Seline Mood Diary - трекер настроения</h1>
             <p>Seline Mood Diary - это веб-приложение, позволяющее оставлять заметки о своём психологическом состоянии, как подробно описывая прошедший день, так и оставляя лишь стикер в качестве записи о нём.</p>
         </section>
+        {% if usr.is_authenticated %}
+        {{ usr }}
+        {% endif %}
         <section>
             <h1>Разработчики</h1>
             <p>Разработками данного учебного веб-приложения являются студенты группы БФИ2202:</p>
