--- a/selinemooddiary/frontend_common/src/static/css/menu.css
+++ b/selinemooddiary/frontend_common/src/static/css/menu.css
@@ -4,10 +4,14 @@
     display: flex;
     flex-direction: column;
     width: 15rem;
-    height: calc(100vh - 4rem - 2px);
+    height: 100%;
     border: 1px solid #D9D9D9;
     border-radius: 1rem;
     padding: 0 1rem;
+    overflow-y: auto;
+    scrollbar-gutter: stable;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 .main-menu h1 {
