--- a/selinemooddiary/frontend_common/src/static/css/auth.css
+++ b/selinemooddiary/frontend_common/src/static/css/auth.css
@@ -1,3 +1,7 @@
+body {
+  background-image: url('../../assets/images/2.jpeg');
+}
+
 .auth-page {
     display: flex;
     justify-content: center;
@@ -38,13 +42,13 @@
     margin-top: 0.5em;
 }
 
-button[type="submit"] {
+.auth-page button[type="submit"] {
     color: white;
     border: none;
     border-radius: 0.5em;
     padding: 0.5em;
     width: 60%;
-    background-color: #14ae5c;
+    background-color: #1ac66a;
     margin: 1em auto 0.75em;
 }
 
